기능: 영화관 분석 차트 추가
